# multipleInstallers

./: CMakeLists.txt  README.md
app1/: CMakeLists.txt  main.cpp
app2/: CMakeLists.txt  main.cpp
cmake/: CMakeLists.txt
